--- a/static/css/jquerymobile.nativedroid.light.css
+++ b/static/css/jquerymobile.nativedroid.light.css
@@ -18,7 +18,7 @@
 .ui-page-theme-b .ui-header .ui-btn:hover,
 .ui-overlay-b, .ui-page-theme-b, .ui-page-theme-b .ui-panel-wrapper,
 .ui-page-theme-b, .ui-page-theme-b .ui-body-inherit, html .ui-bar-b .ui-body-inherit, html .ui-page-theme-b .ui-body-inherit, html body .ui-group-theme-b .ui-body-inherit, html .ui-panel-page-container-b {
-	color: #08313f;
+	color: #666;
 }
 
 
@@ -71,6 +71,7 @@
 
 .ui-header.ui-bar-b,.ui-footer.ui-bar-b {
 	background-color: #FFFFFF;
+	overflow:hidden;
 }
 
 .ui-listview .ui-bar-b {
@@ -103,7 +104,7 @@ html .ui-body-b .ui-panel-open .ui-body-inherit {
 }
 
 .ui-page-theme-b .ui-panel-open .ui-btn {
-	color: rgba(255,255,255,0.8);
+	color: #fff;
 }
 
 .ui-page-theme-b .ui-panel-open {
